--- a/index.html
+++ b/index.html
@@ -6,23 +6,33 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <header>
     <h1> 🌎 LABORATRIVIA 🌎 </h1>
-    <h3 id="bienvenida"> BIENVENID@ </h3><!-- Este elemento nos permite agregar el nombre del usuario -->
+    <form>
+      <p> <!---Campo de texto-->
+        <label for="name">Nombre:</label>
+        <input type="text" name="nombre" id="name" placeholder="Escribe tu nombre">
+      </p>
+    <input id="button" type="button" value="Iniciar" onclick="checkName();">
+  </form>
+  <h3 id="bienvenida"> BIENVENID@ </h3>
+</body>
 
     <hr/>
   </header>
+
   <section>
-    <div id="contenedorPrincipal"><!-- Nos permite ver el marcador -->
+    <div id="contenedorPrincipal">
       <h3>RESULTADOS</h3>
       <div id="respuestasCorrectas" class="marcador">
 
-      </div><!-- Se visualizan las respuestas correctas -->
+      </div>
       <div id="respuestasIncorrectas"  class="marcador">
 
-      </div><!-- Nos permite visualizar las respuestas incorrectas -->
+      </div>
     </div>
   </section>
-  <!-- script type="text/javascript" src="js/app.js"></script -->
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
