--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <header>
     <h1> 🌎 LABORATRIVIA 🌎 </h1>
+    <button onclick="MyFunction()">Iniciar</button>
   <h3 id="bienvenida"> BIENVENID@ </h3>
 </body>
 
@@ -16,7 +17,7 @@
   </header>
 
   <section>
-    <div id="contenedorPrincipal">
+    <div id="contenedorPrincipal" style="display: none">
       <h3>RESULTADOS</h3>
       <div id="respuestasCorrectas" class="marcador">
 
